Updated for PrgEnv-gnu/19.2, IOUT=9 in COMMAND for NetCDF output.

--- a/src/FLEXPART.env
+++ b/src/FLEXPART.env
@@ -1,7 +1,22 @@
-# Solution according to Matthias Kraushaar, CSCS, Ticket [cscs.ch #37766]
-module unload curl
-module use /apps/common/UES/sandbox/kraushm/tsa-gnu-73/easybuild/modules/all
-module use /tsa/kraushm/FLEXPART/GNU-7.4.0/modulefiles
+# Add operational modulefiles
+source ~osm/.opr_setup_dir
+module use --append ${OPR_SETUP_DIR}/modules/modulefiles
 
-module load netcdf-fortran/4.4.5-gmvolf-18.12
-module load eccodes/2.14.1-gnu-7.4.0-noomp
+# Load modules required for FLEXPART
+# Version for Red Hat 7.7
+
+# Load PrgEnv
+module load PrgEnv-gnu/19.2-nocuda
+
+# Load netcdf
+module load netcdf-fortran/4.4.5-foss-2019b
+
+# eccodes
+# Uncomment one of the versions below as appropriate
+# OpenMP version (only for FLEXPART-COSMO)
+# module load eccodes/2.17.0-gnu-8.3.0-nocuda-omp
+# Sequential verion
+module load eccodes/2.17.0-gnu-8.3.0-nocuda-noomp
+
+# Flag for makefile.meteoswiss
+export PE_ENV=GNU
