--- a/src/makefile.meteoswiss
+++ b/src/makefile.meteoswiss
@@ -3,6 +3,9 @@ SHELL = /bin/bash
 #  DESCRIPTION
 #    Makefile for FLEXPART. Standard (serial) and parallel (MPI) version
 #
+#    This version of the makefile has been adapted for use at MeteoSwiss.
+#    Run script make.meteoswiss to compile, do not use 'make' directly.
+#
 #    Dependencies are resolved in this makefile, so parallel make is
 #    possible ("make -j")
 #
@@ -50,29 +53,6 @@ FLEXPART-MPI-DBG = DBG_FLEXPART_MPI
 FLEXPART-SERIAL = FLEXPART
 
 
-ifeq ($(gcc), 4.9)
-# Compiled libraries under user ~flexpart, gfortran v4.9
-	ROOT_DIR = /homevip/flexpart/
-
-	F90	  = ${ROOT_DIR}/gcc-4.9.1/bin/gfortran
-	MPIF90    = ${ROOT_DIR}/bin/mpifort
-
-	INCPATH1  = ${ROOT_DIR}/gcc-4.9.1/include	
-	INCPATH2  = ${ROOT_DIR}/include
-	LIBPATH1 = ${ROOT_DIR}/lib
-else 
-# Compiled libraries under user ~flexpart, gfortran v5.4
-	ROOT_DIR = /homevip/flexpart/
-
-	F90	  = /usr/bin/gfortran
-	MPIF90    = /usr/bin/mpifort
-
-	INCPATH1  = ${ROOT_DIR}/gcc-5.4.0/include	
-	INCPATH2  = /usr/include
-	LIBPATH1 = ${ROOT_DIR}/gcc-5.4.0/lib
-endif
-
-
 ### Enable netCDF output?
 ifeq ($(ncf), yes)
 	NCOPT = -DUSE_NCF -lnetcdff	
@@ -91,12 +71,11 @@ O_LEV = 0 # [0,1,2,3,g,s,fast]
 O_LEV_DBG = g # [0,g]
 
 ## LIBRARIES
-#LIBS = -lgrib_api_f90 -lgrib_api -lm -ljasper -lnetcdff
 LIBS = -leccodes_f90 -leccodes -lm -ljasper -laec $(NCOPT)
 
-FFLAGS   = -I$(INCPATH1) -I$(INCPATH2) -O$(O_LEV) -g -cpp -m64 -mcmodel=medium -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV) $(NCOPT) $(FUSER)  #-Warray-bounds -fcheck=all # -march=native
+FFLAGS   = -I$(INCPATH1) -I$(INCPATH2) -I${EBROOTNETCDFMINFORTRAN}/include -O$(O_LEV) -g -cpp -m64 -mcmodel=large -fPIC -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV) $(NCOPT) $(FUSER)
 
-DBGFLAGS = -I$(INCPATH1) -I$(INCPATH2) -O$(O_LEV_DBG) -g3 -ggdb3 -cpp -m64 -mcmodel=medium -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV_DBG) $(NCOPT) -fbacktrace   -Wall  -fdump-core $(FUSER)  #  -ffpe-trap=invalid,overflow,denormal,underflow,zero  -Warray-bounds -fcheck=all
+DBGFLAGS = -I$(INCPATH1) -I$(INCPATH2) -O$(O_LEV_DBG) -g3 -ggdb3 -cpp -m64 -mcmodel=large -fPIC -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV_DBG) $(NCOPT) -fbacktrace   -Wall  -fdump-core $(FUSER)  #  -ffpe-trap=invalid,overflow,denormal,underflow,zero  -Warray-bounds -fcheck=all
 
 LDFLAGS  = $(FFLAGS) -L$(LIBPATH1) -Wl,-rpath,$(LIBPATH1) -L$(LIBPATH2) -L$(LIBPATH3) $(LIBS) 
 LDDEBUG  = $(DBGFLAGS) -L$(LIBPATH1) -L$(LIBPATH2) -L$(LIBPATH3) $(LIBS)
