Adapted for eccode 2.19.0.

--- a/src/FLEXPART.env
+++ b/src/FLEXPART.env
@@ -1,22 +1,13 @@
-# Add operational modulefiles
+# Source operational definition of OPR_SETUP_DIR
 source ~osm/.opr_setup_dir
-module use --append ${OPR_SETUP_DIR}/modules/modulefiles
 
 # Load modules required for FLEXPART
 # Version for Red Hat 7.7
-
-# Load PrgEnv
+# Version for eccodes 2.19.0
 module load PrgEnv-gnu/19.2-nocuda
-
-# Load netcdf
 module load netcdf-fortran/4.4.5-foss-2019b
-
-# eccodes
-# Uncomment one of the versions below as appropriate
-# OpenMP version (only for FLEXPART-COSMO)
-# module load eccodes/2.17.0-gnu-8.3.0-nocuda-omp
-# Sequential verion
-module load eccodes/2.17.0-gnu-8.3.0-nocuda-noomp
+module use --append ${OPR_SETUP_DIR}/modules/modulefiles
+module load eccodes/2.19.0-gnu-8.3.0-nocuda-noomp
 
 # Flag for makefile.meteoswiss
 export PE_ENV=GNU
