--- a/src/makefile.meteoswiss
+++ b/src/makefile.meteoswiss
@@ -52,6 +52,12 @@ FLEXPART-MPI-DBG = DBG_FLEXPART_MPI
 # Serial processing executable
 FLEXPART-SERIAL = FLEXPART
 
+# Settings for CSCS
+F90       = gfortran
+MPIF90    = mpif90
+INCPATH1  = ${ECCODESROOT}/include
+INCPATH2  = ${CURL_INCLUDES}
+FUSER     = -finit-local-zero -lpthread
 
 ### Enable netCDF output?
 ifeq ($(ncf), yes)
@@ -71,14 +77,14 @@ O_LEV = 0 # [0,1,2,3,g,s,fast]
 O_LEV_DBG = g # [0,g]
 
 ## LIBRARIES
-LIBS = -leccodes_f90 -leccodes -lm -ljasper -laec $(NCOPT)
+LIBS = -lm $(NCOPT)
 
 FFLAGS   = -I$(INCPATH1) -I$(INCPATH2) -I${EBROOTNETCDFMINFORTRAN}/include -O$(O_LEV) -g -cpp -m64 -mcmodel=large -fPIC -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV) $(NCOPT) $(FUSER)
 
 DBGFLAGS = -I$(INCPATH1) -I$(INCPATH2) -O$(O_LEV_DBG) -g3 -ggdb3 -cpp -m64 -mcmodel=large -fPIC -fconvert=little-endian -frecord-marker=4 -fmessage-length=0 -flto=jobserver -O$(O_LEV_DBG) $(NCOPT) -fbacktrace   -Wall  -fdump-core $(FUSER)  #  -ffpe-trap=invalid,overflow,denormal,underflow,zero  -Warray-bounds -fcheck=all
 
-LDFLAGS  = $(FFLAGS) -L$(LIBPATH1) -Wl,-rpath,$(LIBPATH1) -L$(LIBPATH2) -L$(LIBPATH3) $(LIBS) 
-LDDEBUG  = $(DBGFLAGS) -L$(LIBPATH1) -L$(LIBPATH2) -L$(LIBPATH3) $(LIBS)
+LDFLAGS  = $(FFLAGS) $(ECCODES_LD_FLAGS) $(JASPER_LD_FLAGS) $(LIBAEC_LD_FLAGS) $(LIBS) 
+LDDEBUG  = $(DBGFLAGS) $(ECCODES_LD_FLAGS) $(JASPER_LD_FLAGS) $(LIBAEC_LD_FLAGS) $(LIBS)
 
 MODOBJS = \
 par_mod.o    		com_mod.o \
